--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,3 +1,6 @@
+$fuente_principal : "Montserrat", sans-serif;
 body {
-    background-color: grey;
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
 }
