--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,6 +1,1 @@
-$fuente_principal : "Montserrat", sans-serif;
-body {
-    font-family: "Montserrat", sans-serif;
-    font-optical-sizing: auto;
-    font-style: normal;
-}
+@forward 'base/';
