--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -3,7 +3,21 @@
 
 .header {
     background-color: v.$verde;
+
+    @include m.tablet {
+        &.fixed {
+            position: fixed;
+            left: 0;
+            top: 0;
+            width: 100%;
+            box-shadow: .1rem .2rem .3rem #333;
+        }
+    }
+
     .contenido-header {
+        a {
+            color: v.$blanco;
+        }
         padding: 2rem;
         @include m.tablet {
             display: flex;
@@ -35,7 +49,8 @@
         color: v.$blanco;
         font-size: 2.4rem;
 
-        &:hover {
+        &:hover,
+        &.active {
             color: v.$amarillo;
         }
     }
